--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,7 +1,12 @@
 header {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 20px;
+  width: 100%;
+
+  background-color: var(--bg);
+  border: 1px solid var(--border-muted);
 }
 
 nav {
