--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,16 +1,43 @@
 header {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 20px;
+  gap: 20px;
+  padding: 10px;
   width: 100%;
 
   background-color: var(--bg);
   border: 1px solid var(--border-muted);
 }
 
-nav {
+.header-main {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  a {
+    display: flex;
+  }
+
+  .logo {
+    height: 50px;
+    width: auto;
+    margin-right: 10px;
+  }
+}
+
+.controls {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
   gap: 10px;
-  padding: 20px;
+  margin-left: 10px;
+
+  a {
+    display: flex;
+  }
+
+  svg {
+    color: var(--primary);
+  }
 }
