--- a/src/index.css
+++ b/src/index.css
@@ -33,12 +33,15 @@ dialog {
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  font-weight: 600;
+  color: var(--text);
+  text-decoration: none;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--primary);
+}
+a:active {
+  color: var(--btn-active);
 }
 
 body {
@@ -63,7 +66,9 @@ button {
   color: var(--btn-text);
   background-color: var(--primary);
   cursor: pointer;
-  transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
+  transition:
+    background-color 0.15s ease-in-out,
+    color 0.15s ease-in-out;
 }
 button:hover {
   color: var(--btn-text-hover);
