fix: center hero section on homepage

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -2,6 +2,7 @@ main:has(.home-page) {
   padding: 0;
   width: 100%;
   position: relative;
+  justify-content: center;
 }
 
 main:has(.home-page)::after {
