--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,7 +5,7 @@ header {
   padding: 10px;
   width: 100%;
 
-  background-color: var(--bg);
+  background-color: var(--bg-light);
   border: 1px solid var(--border-muted);
 }
 
