--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,12 +1,11 @@
 header {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  padding: 10px;
+  padding: 0.25rem 0.5rem;
   width: 100%;
 
   background-color: var(--bg-light);
-  border: 1px solid var(--border-muted);
+  border-bottom: 1px solid var(--border-muted);
 }
 
 .header-main {
@@ -16,12 +15,6 @@ header {
 
   a {
     display: flex;
-  }
-
-  .logo {
-    height: 50px;
-    width: auto;
-    margin-right: 10px;
   }
 }
 
@@ -59,12 +52,38 @@ header {
     align-items: center;
     justify-content: center;
 
-    background-color: oklch(60% 0.21428 23.571);
+    background-color: var(--highlight);
     color: var(--bg-light);
 
     font-size: 12px;
     font-weight: 600;
     line-height: 1;
     border-radius: 50%;
+  }
+}
+
+.logo-container {
+  .logo {
+    height: 50px;
+    width: auto;
+    margin-right: 10px;
+  }
+
+  .logo-mobile {
+    display: none;
+    height: 50px;
+    width: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .logo-container {
+    .logo {
+      display: none;
+    }
+
+    .logo-mobile {
+      display: flex;
+    }
   }
 }
