--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -60,7 +60,7 @@ footer {
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 768px) {
   footer {
     justify-content: center;
 
@@ -76,5 +76,11 @@ footer {
       flex: none;
       margin: 10px;
     }
+  }
+}
+
+@media (max-width: 480px) {
+  footer {
+    justify-content: flex-start;
   }
 }
