--- a/src/styles/CartPage.css
+++ b/src/styles/CartPage.css
@@ -27,6 +27,8 @@
     display: flex;
     align-items: center;
     padding: 6px 12px;
+    padding-left: 8px;
+    margin-top: 4px;
     font-size: 1.25rem;
     font-weight: 600;
 
@@ -59,6 +61,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    text-wrap: balance;
   }
 }
 
@@ -128,6 +131,41 @@
 
     h3 {
       font-size: 1.25rem;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .main-h1 {
+    font-size: 2.75rem;
+  }
+
+  .cart-container {
+    flex-direction: column;
+  }
+
+  .summary {
+    width: 100%;
+  }
+}
+
+@media (max-width: 425px) {
+  .main-h1 {
+    font-size: 2rem;
+  }
+
+  /* .cart-items-header {
+    font-size: 1rem;
+    button {
+    }
+  } */
+
+  .cart-item {
+    flex-direction: column;
+    align-items: flex-start;
+
+    img {
+      max-width: 100%;
     }
   }
 }
