--- a/src/styles/ProductPage.css
+++ b/src/styles/ProductPage.css
@@ -14,7 +14,7 @@ main:has(.product-page) {
   gap: 10px;
 
   img {
-    border: 1px solid var(--border);
+    border: 1px solid var(--border-muted);
     border-radius: 8px;
     object-fit: contain;
 
@@ -38,6 +38,10 @@ main:has(.product-page) {
   flex-direction: column;
   gap: 1rem;
 
+  h2 {
+    text-wrap: pretty;
+  }
+
   h3 {
     font-size: 1.25em;
   }
@@ -56,10 +60,14 @@ main:has(.product-page) {
 
 .quantity-controls {
   display: flex;
-  justify-content: flex-start;
+  width: 170px;
 
   button {
     padding: 8px 20px;
+  }
+
+  button:only-of-type {
+    width: 100%;
   }
 
   button,
@@ -68,12 +76,17 @@ main:has(.product-page) {
     font-weight: 500;
   }
 
+  button {
+    width: 55px;
+  }
+
   input {
     text-align: center;
     width: 60px;
     border: var(--primary) solid 1px;
     outline: none;
     cursor: default;
+    flex: 1;
   }
 
   /* Hide number input spinners in Chrome, Safari, Edge, Opera */
@@ -87,5 +100,17 @@ main:has(.product-page) {
   input[type="number"] {
     -moz-appearance: textfield;
     appearance: textfield;
+  }
+}
+
+@media (max-width: 768px) {
+  .product-page {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 425px) {
+  .image-carousel img {
+    padding: 10px 0;
   }
 }
