--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,13 +13,13 @@ main {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  gap: 20px;
+  gap: 1rem;
   padding: 20px;
 
   width: 100%;
   max-width: 1200px;
 
   h1 {
-    margin-bottom: 10px;
+    margin-bottom: 0.5rem;
   }
 }
