--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -10,8 +10,8 @@ main:has(.home-page)::after {
   content: "";
   position: absolute;
   inset: 0;
-  /* background-image: url("../assets/landing.png"); */
-  background-image: url("../assets/wardrobe-hero.jpg");
+  /* Fallback: jpg */
+  background-image: url("../assets/wardrobe-hero.avif"), url("../assets/wardrobe-hero.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
