--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,11 +1,15 @@
 header {
   display: flex;
   flex-direction: column;
-  padding: 0.25rem 0.5rem;
+  padding: 0.5rem;
   width: 100%;
 
+  position: sticky;
+  top: 0;
+  z-index: 100;
+
   background-color: var(--bg-light);
-  border-bottom: 1px solid var(--border-muted);
+  border-bottom: 1px solid var(--border-subtle);
 }
 
 .header-main {
