--- a/src/styles/ShopControls.css
+++ b/src/styles/ShopControls.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
 }
 
-.shop-controls select {
+select {
   padding: 0.75rem 1rem;
   font-size: 1rem;
   font-family: inherit;
@@ -36,10 +36,60 @@
   }
 }
 
-.shop-controls select option:checked {
+option:checked {
   background-color: var(--bg-dark);
   color: var(--text);
   font-weight: 600;
+}
+
+/** new custom styles for select element below for browser that support it */
+
+/** opt-in to the new custom select functionality */
+select,
+::picker(select) {
+  appearance: base-select;
+}
+
+select::picker-icon {
+  color: #999999;
+  transition: 0.4s rotate;
+}
+select:open::picker-icon {
+  rotate: 180deg;
+}
+
+select:open {
+  border-radius: 8px 8px 0 0;
+  border-color: var(--primary);
+  box-shadow: 0 0 0 3px rgba(255, 0, 0, 0.1);
+}
+
+option {
+  padding: 6px 12px;
+
+  &:hover {
+    background-color: var(--bg-dark);
+  }
+
+  &::checkmark {
+    display: none;
+  }
+}
+
+::picker(select) {
+  border: 1px solid var(--border-muted);
+  border-top: none;
+  opacity: 0;
+  transition: all 0.2s allow-discrete;
+}
+
+::picker(select):popover-open {
+  opacity: 1;
+}
+@starting-style {
+  ::picker(select):popover-open {
+    opacity: 0;
+  }
 }
 
 @media (max-width: 768px) {
